# link-lock

./: LICENSE  README.md  ads.txt  api.js  app.json  b64.js  index.html  index.js  link-lock.gemspec  main.go  main.py  package.json  setup.cfg  style.css  version.rb
.github/: FUNDING.yml
bruteforce/: get.php  index.html
create/: create.js  direct.js  index.html
decrypt/: decrypt.js  index.html
hidden/: README.md  decrypt-bookmarklet.js  get.js  hidden.js  index.html
js/: download.js  from.jsx  url.js
