[metadata]
license_file = LICENSE.md
Home = index.html
git = .gitignore
Readme = README.md
Api = api.js
App = app.json
Base = b64.js
Force = bruteforce/bruteforce.js
Php Foeece = bruteforce/get.php
Oppen = bruteforce/index.html
Img = corner-ribbon-minified.svg
icon = corner-ribbon.svg
Live = create/create.js
Live js = create/direct.js
Preview = create/index.html
Js = decrypt/decrypt.js
Home decrypt = decrypt/index.html
Icon = favicon.ico
Icon Svg = favicon.svg
Hidden = hidden/README.md
Hidden js = hidden/decrypt-bookmarklet.js
get js = hidden/get.js
hidden js = hidden/hidden.js
Home hidden = hidden/index.html
Page = index.html
Index js = index.js
Gem = link-lock.gemspec
go = main.go
Py = main.py
Package = package.json
css = style.css
V = version.rb
base Link : https://wahyu9kdl.github.io/link-look/*
